--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="input-group mb-3">
                 <input id="inputBox" type="text" class="form-control" placeholder="Search Your Meal">
                 <div class="input-group-append">
-                    <button id="searchBtn" type="button" class="btn btn-primary">Search</button>
+                    <button id="searchBtn" type="button" class="btn btn-danger">Search</button>
                 </div>
             </div>
         </form>
